--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "react-toastify": "^8.2.0"
+    "react-toastify": "^8.2.0",
+    "sweetalert2": "^11.4.4",
+    "sweetalert2-react-content": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
